--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ install:
 before_install:
   - pip install -r requirements.txt
   - pip install coveralls
+  - pip install moto
 after_success:
   coveralls
 # command to run tests
 script:
   - nosetests
+  - rm -rf tests/__pycache__
   - coverage run --source=notificationhub_sdk -m unittest tests/*
