--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ python:
 install:
   - pip install -r requirements.txt
 before_install:
-  - pip install -r requirements.txt
-  - pip install coveralls
+  - pip install codecov
   - pip install moto
 after_success:
-  coveralls
+  codecov
 # command to run tests
 script:
   - nosetests
